api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/rpayapi: "true"
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: GET_HOSTS_FROM
              value: dns
          image: rakshitkapoor456/rpay_api:latest
          name: rpay
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /go/src/rpayApi
              name: api-claim0
      hostname: rpayapi
      restartPolicy: Always
      volumes:
        - name: api-claim0
          persistentVolumeClaim:
            claimName: api-claim0
status: {}
